--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <body>
         <div class="container login-container">
             <div class="login-box">
-                <img src="/images/logo.png" alt="logo" width="100px">
+                <img src="images/logo.png" alt="logo" width="100px">
                 <h2 class="mt-4 mb-5">Welcome back</h2>
                 <input type="email" class="form-control" placeholder="email" required>
                 <input type="password" class="form-control" placeholder="password" required>
