--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
                 <h2 class="mt-4 mb-5">Welcome back</h2>
                 <input type="email" class="form-control" placeholder="email" required>
                 <input type="password" class="form-control" placeholder="password" required>
-                <button type="button" class="btn btn-primary btn-block mt-3">Login</button>
+                <button type="button" class="btn btn-primary btn-block mt-3 w-100">Login</button>
                 <div class="create-account mt-4">
                     <p>or create an account</p>
-                    <button type="button" class="btn btn-outline-secondary">Sign up</button>
+                    <button type="button" class="btn btn-outline-secondary w-100">Sign up</button>
                 </div>
             </div>
         </div>
